--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
   <script src="js/views/reportsView.js"></script>
   <script src="js/views/settingsView.js"></script>
   <script src="js/utils/backup.js"></script>
+  <!-- jsPDF Library -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="js/utils/pdfGenerator.js"></script>
   <script src="js/app.js"></script>
 </body>
