--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
   <script src="js/components/modal.js"></script>
   <script src="js/components/table.js"></script>
   <script src="js/components/toast.js"></script>
+  <script src="js/components/spinner.js"></script>
   <script src="js/views/dashboardView.js"></script>
   <script src="js/views/clientsView.js"></script>
   <script src="js/views/servicesView.js"></script>
