--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
           </a>
         </li>
       </ul>
+
+      <!-- Google Drive Status -->
+      <div id="sidebar-drive-status" class="sidebar-footer"></div>
     </nav>
 
     <!-- Main Content Area -->
